# Orthopaedics

./: .env.example  .gitignore  README.md  api.py  chunk_pages_27_845.py  chunker.py  ingest_neo4j.py  ingest_pinecone.py  live_check.py  pyproject.toml  render.yaml  requirements-api.txt  requirements.txt  run_graphrag.py  run_postprocessing.py  run_pulmonology.py  smoke_test.py  test_pipeline.py
Memory_Layer/session_memory/: context_builder.py  models.py  retriever.py  state_extractor.py  summarizer.py
app/: __init__.py  main.py
chunking/: domain.py
chunking/cleaners/: text_cleaner.py
chunking/config/: settings.py
chunking/detectors/: structure.py
chunking/extractors/: semantic.py
chunking/llm/: __init__.py  backoff.py  client.py  prompts.py  retry_engine.py
chunking/loaders/: csv_loader.py  pdf_loader.py
chunking/pipeline/: manager.py
chunking/postprocessing/: __init__.py  canonicalization.py  entity_overrides.py  postprocessor.py  relation_repair.py
chunking/schemas/: models.py
chunking/storage/: versioned_storage.py
chunking/validators/: schema_validator.py
docs/: HANDOFF.md  RETARGETING.md
episodic/: config.py
episodic/api/: __init__.py  dependencies.py
episodic/services/: retriever.py
graphrag/config/: settings.py
graphrag/domain/: __init__.py  answer_prompt.py  clinical_policy.py  entity_rules.py  messages.py  prompts.py  query_taxonomy.py  vocabulary.py
graphrag/llm/: gemini_llm.py
graphrag/memory/: session_adapter.py
graphrag/pipeline/: graphrag_pipeline.py
graphrag/processors/: entity_processor.py
(+11 files in other folders)
