[project]
name = "pulmonology-chunker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "pymupdf>=1.24",
    "pandas>=2.0",
    "google-genai>=0.8",
    "openai>=1.40",
    "truststore>=0.9",
    "pinecone>=5.0",
    "neo4j>=5.0",
    "requests>=2.31",
    "redis>=5.0",
    "orjson>=3.9",
]
